@@ -21,6 +21,7 @@
 package com.apple.foundationdb.record.provider.foundationdb.query;
 
 import com.apple.foundationdb.record.RecordCoreException;
+import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.extension.Extension;
 import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.jupiter.api.extension.TestInstancePostProcessor;
@@ -32,8 +33,6 @@ import org.junit.platform.commons.util.AnnotationUtils;
 import javax.annotation.Nonnull;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Stream;
@@ -42,6 +41,14 @@ import java.util.stream.Stream;
  * A JUnit 5 extension that runs the test (which must inherit from {@link FDBRecordStoreQueryTestBase}) with both the
  * old {@link com.apple.foundationdb.record.query.plan.RecordQueryPlanner} and the new, experimental
  * {@link com.apple.foundationdb.record.query.plan.cascades.CascadesPlanner}.
+ *
+ * <p>
+ * This is intended to be composable with {@link ParameterizedTest}s. If a test is marked as both a
+ * {@link ParameterizedTest} and a {@link DualPlannerTest}, then the test will be run for every parameter
+ * configuration under both planners. Note that {@link DualPlannerTest.Planner#CASCADES CASCADES}-only mode
+ * currently doesn't work with parameterized tests, and it will always run the test at least once with
+ * the old planner. (See <a href="https://github.com/FoundationDB/fdb-record-layer/issues/2354">Issue #2354</a>.)
+ * </p>
  */
 public class DualPlannerExtension implements TestTemplateInvocationContextProvider {
 
@@ -53,6 +60,13 @@ public class DualPlannerExtension implements TestTemplateInvocationContextProvid
 
     @Override
     public Stream<TestTemplateInvocationContext> provideTestTemplateInvocationContexts(ExtensionContext context) {
+        final Optional<DualPlannerTest> annotationOptional =
+                AnnotationUtils.findAnnotation(context.getTestMethod(), DualPlannerTest.class);
+        if (annotationOptional.isEmpty()) {
+            throw new RecordCoreException("dual planner test annotation not found");
+        }
+        final DualPlannerTest annotation = annotationOptional.get();
+
         final String displayName = context.getDisplayName();
         if (AnnotationUtils.isAnnotated(context.getTestMethod(), ParameterizedTest.class)) {
             TestTemplateInvocationContextProvider nestedProvider;
@@ -64,16 +78,18 @@ public class DualPlannerExtension implements TestTemplateInvocationContextProvid
             } catch (ClassNotFoundException | NoSuchMethodException | InstantiationException | IllegalAccessException | InvocationTargetException e) {
                 throw new RecordCoreException(e.getClass() + " " + e.getMessage());
             }
-            return nestedProvider.provideTestTemplateInvocationContexts(context).map(existingContext ->
-                            new DualPlannerTestInvocationDisplayNameDecorator(existingContext, true)); // new planner
-        } else {
-            final Optional<DualPlannerTest> annotationOptional =
-                    AnnotationUtils.findAnnotation(context.getTestMethod(), DualPlannerTest.class);
-            if (annotationOptional.isEmpty()) {
-                throw new RecordCoreException("dual planner test annotation not found");
+            // Create a Cascades invocation context. The non-Cascades planner will be run via the ParameterizedTest
+            // extension running the test on its own, which will run the old planner by default.
+            // Note that, as a consequence, this means that CASCADES (only) mode does not work with parameterized tests,
+            // and the old planner will always be run.
+            // See: https://github.com/FoundationDB/fdb-record-layer/issues/2354
+            if (annotation.planner() != DualPlannerTest.Planner.OLD) {
+                return nestedProvider.provideTestTemplateInvocationContexts(context).map(existingContext ->
+                        new ParameterizedDualPlannerTestInvocationContext(existingContext, true));
+            } else {
+                return Stream.of();
             }
-            final DualPlannerTest annotation = annotationOptional.get();
-
+        } else {
             switch (annotation.planner()) {
                 case OLD:
                     return Stream.of(
@@ -92,19 +108,19 @@ public class DualPlannerExtension implements TestTemplateInvocationContextProvid
 
     }
 
+    @Nonnull
+    private static Extension setPlannerExtension(boolean useCascades) {
+        return (TestInstancePostProcessor) (testInstance, context) ->
+                ((FDBRecordStoreQueryTestBase) testInstance).setUseCascadesPlanner(useCascades);
+    }
+
     private static class DualPlannerTestInvocationContext implements TestTemplateInvocationContext {
         private final String displayName;
         private final List<Extension> extensions;
 
-        public DualPlannerTestInvocationContext(String testName, boolean useRewritePlanner) {
-            this(testName, useRewritePlanner, Collections.emptyList());
-        }
-
-        public DualPlannerTestInvocationContext(String baseName, boolean useRewritePlanner, List<Extension> extensions) {
-            this.displayName = String.format("%s[%s]", baseName, useRewritePlanner ? "cascades" : "old");
-            this.extensions = new ArrayList<>(extensions);
-            this.extensions.add((TestInstancePostProcessor) (testInstance, context) ->
-                    ((FDBRecordStoreQueryTestBase) testInstance).setUseRewritePlanner(useRewritePlanner));
+        public DualPlannerTestInvocationContext(String testName, boolean useCascadesPlanner) {
+            this.displayName = String.format("%s[%s]", testName, useCascadesPlanner ? "cascades" : "old");
+            this.extensions = List.of(setPlannerExtension(useCascadesPlanner));
         }
 
         @Override
@@ -118,26 +134,31 @@ public class DualPlannerExtension implements TestTemplateInvocationContextProvid
         }
     }
 
-    private static class DualPlannerTestInvocationDisplayNameDecorator implements TestTemplateInvocationContext {
-
+    private static class ParameterizedDualPlannerTestInvocationContext implements TestTemplateInvocationContext {
+        @Nonnull
+        private final List<Extension> extensions;
         @Nonnull
         private final TestTemplateInvocationContext underlying;
 
         private final boolean useCascades;
 
-        public DualPlannerTestInvocationDisplayNameDecorator(@Nonnull final TestTemplateInvocationContext underlying, final boolean useCascades) {
+        public ParameterizedDualPlannerTestInvocationContext(@Nonnull final TestTemplateInvocationContext underlying, final boolean useCascades) {
             this.underlying = underlying;
             this.useCascades = useCascades;
+            this.extensions = ImmutableList.<Extension>builderWithExpectedSize(underlying.getAdditionalExtensions().size() + 1)
+                    .addAll(underlying.getAdditionalExtensions())
+                    .add(setPlannerExtension(useCascades))
+                    .build();
         }
 
         @Override
         public String getDisplayName(final int invocationIndex) {
-            return underlying.getDisplayName(invocationIndex) + (useCascades ? "[cascades]" : "[heuristics]");
+            return underlying.getDisplayName(invocationIndex) + (useCascades ? "[cascades]" : "[old]");
         }
 
         @Override
         public List<Extension> getAdditionalExtensions() {
-            return underlying.getAdditionalExtensions();
+            return extensions;
         }
     }
 }
